--- a/index.html
+++ b/index.html
@@ -20,13 +20,9 @@
         <div class="banner">
             <img src="golzinho_image.jpg" alt="y">
         </div>
-        <!-- <div class="banner">
-            <img src="https://postimg.cc/zbRhyfwh"
-                alt="y">
-        </div> -->
     </header>
 
-     <!-- Opções para adicionar um novo item -->
+     <!-- Opções para adicionar um novo game -->
     <div class="row">
         <div class="column">
             <div class="newGame">
